# pipewatch

./: .gitignore  README.md  pyproject.toml
pipewatch/: __init__.py  config.py  config_default.yaml  evaluator.py  fetcher.py  reporter.py
tests/: test_config.py  test_evaluator.py  test_fetcher.py
